--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -26,5 +26,7 @@ rusqlite = { version = "0.35.0", features = ["bundled"] }
 chrono = "0.4.40"
 dirs = "6.0.0"
 argon2 = { version = "0.5.3", features = ["std"] }
+ssh2 = "0.9.4"
+once_cell = "1.19"
 
 [package.metadata.tauri]
